Fixed corrupted application files Remove deprecated managementDependencies Add type to ApplicationDependency